--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -90,7 +90,7 @@
   /*shadow variables*/
   $shadow: 1px 1px 7px rgba(154, 154, 204, .1);
   
-  $dark-theme:#2a2e3f;
+  $dark-theme:#38CAB3;
   $border:#ededf5;
   $form-border:#cdd4e2;
   $bg-hover:#fcfcff;
