--- a/src/assets/scss/layout/_style-dark.scss
+++ b/src/assets/scss/layout/_style-dark.scss
@@ -5237,7 +5237,7 @@ body.dark-theme {
 }
 
 .rtl.dark-theme .notification .notification-body:before {
-  border-inline-start-color: #2a2e3f;
+  border-inline-start-color: #38CAB3;
   border-inline-end-color: transparent !important;
   transform: rotate(180deg);
 }
